fixed some error and made overflow hidden in table wrapper more specific

--- a/src/main/components/table/UITable.scss
+++ b/src/main/components/table/UITable.scss
@@ -250,6 +250,9 @@
 
     .p-datatable-wrapper {
         height: calc(100% - 1px);
+    }
+
+    &.p-datatable-scrollable .p-datatable-wrapper {
         overflow-y: hidden;
     }
 
